# csiro-biomass

./: .gitignore  README.md  compose.yaml  pyproject.toml
docs/: 251209_baseline.md  251209_compe_overview.md  251209_data_explain.md  251209_exp001_guide.md  251212_cv_strategy.md  251213_auxiliary_tasks.md  251225_lb-066-dino-v2-mamba-architecture.md  exp013-dinov3-implementation-plan.md  lb-066-dinov2-dense-features-architecture.md
experiments/001/: code.ipynb  config.py  inference.py  train.py
experiments/001/src/: data.py
experiments/002/: code.ipynb  config.py  train.py
experiments/002/src/: data.py
experiments/003/: code.ipynb  config.py
experiments/003/src/: metric.py
experiments/004/: code.ipynb  config.py  train.py
experiments/005/: code.ipynb  config.py  train.py
experiments/005/src/: data.py  loss_function.py  model.py
experiments/006/: code.ipynb  config.py  inference.py  train.py
experiments/007/: code.ipynb  config.py
experiments/007/src/: loss_function.py  model.py
experiments/008/: code.ipynb  config.py  inference.py  train.py
experiments/008/src/: loss_function.py  metric.py  model.py  seed.py
experiments/009/: code.ipynb  config.py  inference.py  train.py
experiments/009/src/: loss_function.py  model.py
experiments/010/: code.ipynb  config.py  inference.py  train.py
experiments/010/src/: data.py  loss_function.py  mixup.py  model.py
experiments/011/: analyze_errors.py  code.ipynb  config.py  train.py
experiments/011/src/: data.py  loss_function.py  mixup.py  model.py
experiments/012/: analyze_errors.py  code.ipynb  config.py  inference.py  train.py
experiments/012/src/: data.py  metric.py  model.py
experiments/013/: README.md  code.ipynb  config.py  extract_features.py  inference.py  inference_dinov3.py  train_head.py
experiments/013/src/: backbone.py  data.py  loss_function.py  model.py
experiments/014/: code.ipynb  config.py  extract_features.py  inference_dinov3.py  train_svr_update_cv.py
experiments/014/src/: head_model.py  manifold_mixup.py  svr_model.py
experiments/015/: code.ipynb  config.py  inference_svr.py  train_svr.py
experiments/015/src/: __init__.py  svr_model.py
experiments/016/: code.ipynb  config.py  inference_svr.py  train_svr.py
experiments/016/src/: svr_model.py
experiments/017/: README.md  code.ipynb  config.py  inference.py  train.py
experiments/017/src/: coverage.py  feature_engine.py  feature_extractor.py
experiments/018/: code.ipynb  config.py  train_head.py
notebook/: csiro-dinov2-dense-features-lb-0-66.ipynb  csiro-pca-pls-text-embeddings.ipynb  eda.ipynb  lb-0-66-dino-v2-backbone-mamba-multi-vit.ipynb
pj_kenpin/: .gitignore  README.md  infer.py  pyproject.toml  train.py
pj_kenpin/configs/backbone/: l.yaml  m.yaml  s.yaml  x.yaml
pj_kenpin/configs/base/: exp_template.yaml
pj_kenpin/configs/exp/: exp001.yaml
pj_kenpin/src/: data.py  loss_function.py  model.py  model_factory.py  seed.py
pj_kenpin/src/tools/: backbone_inf_speed.py  calc_mean_std.py
src/: analyze_errors.py  convert_train_to_wide.py  cv_analysis.py  download.py  generate_pdf_report.py  recalculate_cv_5targets.py  upload.py
sub/: code.ipynb  kernel-metadata.json
(+64 files in other folders)
