[project]
name = "csiro-biomass"
version = "0.1.0"
description = "kaggle competition: csiro-biomass"
readme = "README.md"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "timm>=1.0.22",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "rootutils>=1.0.0",
]

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "third_party"]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "F401",  # Unused import
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value used in comparison, consider replacing with a constant
    "PLW2901",  # `for` loop variable overwritten by assignment target
    "N803",  # Argument name should be lowercase
    "N806",  # Variable name should be lowercase
    "N812",  # Lowercase imported as non-lowercase
]
