[project]
name = "pj-kenpin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "timm>=1.0.20",
    "torch==2.8.0+cu128; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch==2.8.0; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
    "transformers>=4.57.0",
]

[tool.uv.sources]
torch = [
    { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
    { index = "torch-cpu", marker = "sys_platform == 'darwin' or ( sys_platform == 'linux' and platform_machine == 'aarch64')"},
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "third_party"]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "F401",  # Unused import
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value used in comparison, consider replacing with a constant
    "PLW2901",  # `for` loop variable overwritten by assignment target
    "N803",  # Argument name should be lowercase
    "N806",  # Variable name should be lowercase
    "N812",  # Lowercase imported as non-lowercase
]
